# broker-lane-sandbox

./: .gitignore  LICENSE  MODEL-MANIFEST.example.md  README.md  SECURITY.md  models.example.yaml  policy.example.json  policy.model.example.json  pyproject.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml
ai-memory/broker-lane-finalization-4lqiio/: FINDINGS.md  HANDOVER.md  PROGRESS.md  SCOPE.md
docs/: MANUAL.md  P2_BROKER_LOOM_SEAM.md  PUBLIC_READINESS_AUDIT.md  THREAT_MODEL.md  _validation-o4-positive-control.md  model-cache-policy.md
examples/: broker_run_request.example.json  broker_run_result.denied.example.json  broker_run_result.ok.example.json  infer_request.example.json  infer_result.ok.example.json
scripts/: check_model_artifacts.py
src/broker_lane_sandbox/: __init__.py  broker_run.py  catalog.py  cli.py  envscrub.py  executor.py  infer.py  limits.py  modelcache.py  policy.py  preflight.py  result.py  streaming.py
src/broker_lane_sandbox/runners/: __init__.py  base.py  fake_runner.py  llama_cpp.py
tests/: conftest.py  test_broker_run.py  test_fake_runner.py  test_infer.py  test_infer_stream.py  test_model_artifact_invariant.py  test_modelcache.py  test_o4_negative_control.py  test_runners.py  test_safe_exec.py  test_stream_flush_liveness.py  test_streaming.py
