[build-system]
requires = ["setuptools>=61"]   # >=61 for PEP 621 [project] metadata + src-layout discovery
build-backend = "setuptools.build_meta"

[project]
name = "broker-lane-sandbox"
version = "0.2.0"
description = "Safe execution + local/quantized model runtime boundary for broker lanes."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "fbratten" }]
requires-python = ">=3.10"
dependencies = []   # stdlib-only core (P0/P1). Real runners are optional extras later.

[project.optional-dependencies]
yaml = ["pyyaml>=6"]   # optional: YAML policy/catalog. JSON path needs nothing.

[project.urls]
Homepage = "https://github.com/fbratten/broker-lane-sandbox"
Repository = "https://github.com/fbratten/broker-lane-sandbox"

[project.scripts]
bls = "broker_lane_sandbox.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
